--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.15.7",
     "@sanity/image-url": "1",
+    "@sanity/overlays": "^2.3.30",
+    "@sanity/react-loader": "^1.9.5",
     "@sanity/vision": "3",
     "next": "14.1.3",
     "next-sanity": "7",
