--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@sanity/client": "^6.15.7",
     "@sanity/image-url": "1",
     "@sanity/overlays": "^2.3.30",
