--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.15",
     "@radix-ui/react-slot": "^1.0.2",
-    "@sanity/client": "^6.15.7",
+    "@sanity/client": "^6.15.9",
     "@sanity/image-url": "1",
-    "@sanity/overlays": "^2.3.30",
+    "@sanity/preview-url-secret": "^1.6.5",
     "@sanity/react-loader": "^1.9.5",
-    "@sanity/vision": "3",
-    "next": "14.1.3",
-    "next-sanity": "7",
+    "@sanity/vision": "^3.35.1",
+    "@sanity/visual-editing": "^1.8.5",
+    "next": "14.1.4",
+    "next-sanity": "^8.5.1",
     "react": "^18",
     "react-dom": "^18",
     "rxjs": "^7.8.1",
-    "sanity": "3",
+    "sanity": "^3.36.4",
     "styled-components": "6"
   },
   "devDependencies": {
